--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.24.1",
     "axios": "^1.6.7",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.1",
+    "tailwind-merge": "^2.5.5",
     "zod": "^3.22.4",
     "zustand": "^4.5.1"
   },
